base/src/test/resources/failure/cubical/path-constructor-return-type.aya.txt
In file $FILE:5:2 ->

  3 | data PropTrunc (A : Type)
  4 | | emb A
  5 | | trunc : isProp A
        ^---^

Error: Cannot make sense of the return type of the constructor
         | trunc : isProp A
       which eventually returns
         A
       while it should return
         PropTrunc A

1 error(s), 0 warning(s).
What are you doing?
